<resources>
    <string name="app_name">Board Entry Test</string>
    <string name="board_number">Board Number</string>
    <string name="edit_board_number">Enter board number in tournament</string>
    <string name="opps_pair_number">Opponent pairs number</string>
    <string name="edit_opps_pair_number">Enter opponents pair number in tournament</string>
    <string name="result">NS score</string>
    <string name="edit_result">Enter NS result</string>
    <string name="declarer">Dec.</string>
    <string name="edit_declarer">NESW</string>
    <string name="declarer_tricks">Declarer tricks</string>
    <string name="edit_declarer_tricks">-1, 0, 1</string>
    <string name="contract">Board Contract</string>
    <string name="edt_contract">7NTxx</string>
    <string name="lead">Lead</string>
    <string name="edt_lead">Lead</string>
    <string name="check_isns">Are we NS pair?</string>
    <string name="check_bye">Are we Bye?</string>
    <string name="new_board">New Board</string>
    <string name="delete_board">Remove Board</string>
    <string name="show_board">Show Board</string>
    <string name="tournamnent_item">Tournament downloading...</string>
    <string name="get_tournaments">Get tournament list</string>
    <string name="player_device">Device info</string>
    <string name="sync_tournament">Synchronize</string>
    <string name="player_name">Player Name:</string>
    <string name="player_surname">Player Surname:</string>
    <string name="player_email">E-Mail address:</string>
    <string name="player_mobitel">Number:</string>
</resources>
