<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <CheckBox
        android:id="@+id/checkedBye"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/check_bye"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtNSResult"/>

    <TextView
        android:id="@+id/tvNSResult"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDeclarerTricks"
        />

    <EditText
        android:id="@+id/edtNSResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edit_result"
        app:layout_constraintLeft_toRightOf="@+id/tvNSResult"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDeclarerTricks"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvLead"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/lead"
        app:layout_constraintLeft_toRightOf="@+id/edtDeclarerTricks"
        app:layout_constraintTop_toBottomOf="@+id/edtTextContract"/>

    <EditText
        android:id="@+id/edtLead"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edt_lead"
        app:layout_constraintLeft_toRightOf="@+id/tvLead"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextContract"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvBoardNo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/board_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/checkedNS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-50dp"
        android:text="@string/check_isns"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/etBoardNo"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvDeclarer"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/declarer"
        app:layout_constraintLeft_toRightOf="@+id/edtOppsPairs"
        app:layout_constraintTop_toBottomOf="@+id/etBoardNo"/>

    <EditText
        android:id="@+id/edtDeclarer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edit_declarer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvDeclarer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBoardNo"/>

    <EditText
        android:id="@+id/etBoardNo"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:hint="@string/edit_board_number"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/tvBoardNo"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvContract"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/contract"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDeclarer"/>

    <EditText
        android:id="@+id/edtTextContract"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edt_contract"
        app:layout_constraintLeft_toRightOf="@+id/tvContract"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDeclarer"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvDeclarerTricks"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/declarer_tricks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextContract"/>

    <EditText
        android:id="@+id/edtDeclarerTricks"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edit_declarer_tricks"
        app:layout_constraintTop_toBottomOf="@+id/edtTextContract"
        app:layout_constraintLeft_toRightOf="@+id/tvDeclarerTricks"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/edtOppsPairs"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edit_opps_pair_number"
        app:layout_constraintLeft_toRightOf="@+id/tvOppsPairs"
        app:layout_constraintTop_toBottomOf="@+id/etBoardNo"/>

    <TextView
        android:id="@+id/tvOppsPairs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/opps_pair_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBoardNo"/>

    <TextView
        android:id="@+id/tvTournamentUUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/edtNSResult"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/checkedBye"
        android:layout_marginRight="8dp"/>

</android.support.constraint.ConstraintLayout>