<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvPlayerDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="Player Device"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tvDeviceUUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerDevice"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/etIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceUUID"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tvIme"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tvIme"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceUUID"/>

    <TextView
        android:id="@+id/tvPrezime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_surname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPrezime"/>

    <EditText
        android:id="@+id/etPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIme"
        app:layout_constraintLeft_toRightOf="@+id/tvPrezime"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrezime"
        app:layout_constraintLeft_toRightOf="@+id/tvEMail"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/etMobitel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintLeft_toRightOf="@+id/tvMobNum"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tvEMail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrezime"/>

    <TextView
        android:id="@+id/tvMobNum"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/player_mobitel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
</android.support.constraint.ConstraintLayout>